mi-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: 

spec:
  type: 
  selector:
    
  ports:
  - port: 
    targetPort:
