mi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: 
        pathType: 
        backend:
          service:
            name: 
            port:
              number:
